--- a/slite/src/index.css
+++ b/slite/src/index.css
@@ -3,6 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: all 0.3s ease-in;
+}
 
 html {
   font-family: "Inter", sans-serif;
