--- a/slite/src/index.css
+++ b/slite/src/index.css
@@ -17,3 +17,11 @@ html {
 li {
   cursor: pointer;
 }
+/* @layer components {
+  .card {
+    background-color: theme("colors.white");
+    border-radius: theme("borderRadius.lg");
+    padding: theme("spacing.6");
+    box-shadow: theme("boxShadow.xl");
+  }
+} */
